changing from nasa.lu to invisible project

--- a/base.cfg
+++ b/base.cfg
@@ -15,6 +15,7 @@ eggs =
     django-grappelli
     django-dajaxice
     django-debug-toolbar
+    django-audiofield
 parts =
 	django
     johnny-cache
@@ -28,9 +29,9 @@ recipe = djangorecipe
 eggs = ${buildout:eggs}
 settings = 
 extra-paths = 
-    doyouconsider/apps
+    interface/apps
     parts/johnny-cache
-project = doyouconsider
+project = interface
 
 [johnny-cache]
 recipe = zerokspot.recipe.git
