--- a/interface/settings/server.py.template
+++ b/interface/settings/server.py.template
@@ -1,53 +1,95 @@
 LOCAL_SETTINGS = True
-from django.conf import settings
-from ts.settings.base import *
+import sys
+from interface.settings.base import *
 
-SITE_ID = 1
+SECRET_KEY = ''
 
-# define environment
-STAGE_NAME = 'PROD' # either PROD or DEV
+# define environment, either PROD or DEV
+STAGE_NAME = 'PROD'
 
 # debugging changes according to environment configuration
 if STAGE_NAME == 'DEV':
     DEBUG = True
-    EMAIL_BACKEND = 'django.core.mail.backends.console.EmailBackend'    
-else :
+else:
     DEBUG = False
-    EMAIL_BACKEND = 'django.core.mail.backends.smtp.EmailBackend'    
 
 TEMPLATE_DEBUG = DEBUG
 
+EMAIL_BACKEND = 'django.core.mail.backends.smtp.EmailBackend'
+EMAIL_HOST = ''
+EMAIL_HOST_USER = ''
+EMAIL_HOST_PASSWORD = ''
+DEFAULT_FROM_EMAIL = ''
+SERVER_EMAIL = ''
+
 DATABASES = {
     'default': {
-        'ENGINE': 'django.db.backends.mysql',    # Add 'postgresql_psycopg2', 'mysql', 'sqlite3' or 'oracle'.
-        'NAME': '',                         # Or path to database file if using sqlite3.
-        'USER': '',                         # Not used with sqlite3.
-        'PASSWORD': '',                     # Not used with sqlite3.
-        'HOST': '',                         # Set to empty string for localhost. Not used with sqlite3.
-        'PORT': '',                         # Set to empty string for default. Not used with sqlite3.
+        # Add 'postgresql_psycopg2', 'mysql', 'sqlite3' or 'oracle'.
+        'ENGINE': 'django.db.backends.mysql',
+
+        # Or path to database file if using sqlite3.
+        'NAME': '',
+
+        # Not used with sqlite3.
+        'USER': '',
+
+        # Not used with sqlite3.
+        'PASSWORD': '',
+
+        # Set to empty string for localhost. Not used with sqlite3.
+        'HOST': '',
+
+        # Set to empty string for default. Not used with sqlite3.
+        'PORT': '',
     }
 }
- 
+
+# use sqlite for testing
+if 'test' in sys.argv:
+    DATABASES['default'] = {
+        'ENGINE': 'django.db.backends.sqlite3',
+        'NAME': 'test'
+    }
+
 CACHES = {
     'default' : dict(
-        BACKEND = 'johnny.backends.filebased.FileBasedCache',
-        LOCATION = PROJECT_DIR + '/tmp/django_cache',
+        BACKEND = 'johnny.backends.memcached.MemcachedCache',
+        LOCATION = ['unix:/home/memcached.sock'],
         JOHNNY_CACHE = True,
     )
 }
-JOHNNY_MIDDLEWARE_KEY_PREFIX = 'jc_ts'
+JOHNNY_MIDDLEWARE_KEY_PREFIX = 'jc_invs'
+
+HAYSTACK_CONNECTIONS = {
+    'default': {
+        'ENGINE': 'haystack.backends.simple_backend.SimpleEngine',
+    },
+}
+
+# Absolute path to the directory static files should be collected to.
+# Don't put anything in this directory yourself; store your static files
+# in apps' 'static/' subdirectories and in STATICFILES_DIRS.
+# Example: '/home/media/media.lawrence.com/static/'
+STATIC_ROOT = '/home/'
+
+# URL prefix for static files.
+# Example: 'http://media.lawrence.com/static/'
+STATIC_URL = 'http://s.com/static/'
+
+# Additional locations of static files
+STATICFILES_DIRS = (
+    # Put strings here, like '/home/html/static' or 'C:/www/django/static'.
+    # Always use forward slashes, even on Windows.
+    # Don't forget to use absolute paths, not relative paths.
+)
+
+ALLOWED_HOSTS = ('.s.com',)
 
 # Absolute path to the directory that holds media.
 # Example: "/home/media/media.lawrence.com/"
-MEDIA_URL = 'http://127.0.0.1:8000/media/'
+MEDIA_URL = 'http://com.com/media/'
 
-# Local time zone for this installation. Choices can be found here:
-# http://en.wikipedia.org/wiki/List_of_tz_zones_by_name
-# although not all choices may be available on all operating systems.
-# If running in a Windows environment this must be set to the same as your
-# system time zone.
-TIME_ZONE = 'America/New_York'
+MEDIA_ROOT = '/home/media'
 
-# Language code for this installation. All choices can be found here:
-# http://www.i18nguy.com/unicode/language-identifiers.html
-LANGUAGE_CODE = 'en-US'
+# API keys
+GOOGLE_API_KEY = ''
