adding memcached to buildout

--- a/base.cfg
+++ b/base.cfg
@@ -16,6 +16,7 @@ eggs =
     django-dajaxice
     django-debug-toolbar
     django-audiofield
+    python-memcached
 parts =
 	django
     johnny-cache
