converting audio files to mp3 and m4a with ffmpeg using django-celery

--- a/base.cfg
+++ b/base.cfg
@@ -16,6 +16,7 @@ eggs =
     django-debug-toolbar
     django-audiofield
     python-memcached
+    django-celery
 parts =
 	django
     johnny-cache
@@ -23,6 +24,7 @@ versions = versions
 
 [versions]
 django = 1.5.1
+django-celery = 3.0.17
 
 [django]
 recipe = djangorecipe
