--- a/development.cfg
+++ b/development.cfg
@@ -8,11 +8,14 @@
 [buildout]
 extends=
     base.cfg
+eggs +=
+	pycrypto
 parts +=
     fabric
 
 [versions]
 fabric = 1.6.0
+pycrypto = 2.1
 
 [django]
 settings = settings.development
