--- a/base.cfg
+++ b/base.cfg
@@ -4,27 +4,37 @@
 [buildout]
 eggs = 
     MySQL-python
-    south
-    PIL
     simplejson
     pytz
     ajaxuploader
     django-tinymce
     django-flatpages-tinymce
-    django-filebrowser
     django-grappelli
     django-debug-toolbar
     django-audiofield
     python-memcached
     django-celery
+    django-twilio  
 parts =
 	django
     johnny-cache
 versions = versions
 
 [versions]
-django = 1.5.1
-django-celery = 3.0.17
+django = 1.7
+ajaxuploader = 0.3.8
+celery = 3.1.16
+django-celery = 3.1.16
+django-debug-toolbar = 1.2.2
+django-grappelli = 2.6.2
+django-audiofield = 0.6.3
+django-twilio = 0.7.2
+django-tinymce = 1.5.3
+django-flatpages-tinymce = 0.1.1
+MySQL-python = 1.2.5
+simplejson = 3.6.5
+python-memcached = 1.53
+pytz = 2014.7
 
 [django]
 recipe = djangorecipe
